--- a/node/node-farm/package.json
+++ b/node/node-farm/package.json
@@ -4,8 +4,12 @@
   "description": "Website for a farm",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Snash",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "slugify": "^1.3.6"
+  }
 }
