--- a/node/natureTours/package.json
+++ b/node/natureTours/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.2.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.8.9",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
