--- a/node/natureTours/config.env
+++ b/node/natureTours/config.env
@@ -1,1 +1,2 @@
-PORT = 4000
+PORT=4000
+MONGO_URI=mongodb+srv://murciegalo:123456789Dnd111@naturetoursapp-p0zur.mongodb.net/NatureToursApp?retryWrites=true&w=majority
