--- a/node/natureTours/config.env
+++ b/node/natureTours/config.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb+srv://murciegalo:123456789Dnd111@naturetoursapp-p0zur.mongodb.net/NatureToursApp?retryWrites=true&w=majority
-NODE_ENV=development
+MONGO_URI="mongodb+srv://murciegalo:123456789Dnd111@naturetoursapp-p0zur.mongodb.net/NatureToursApp?retryWrites=true&w=majority"
+NODE_ENV="development"
