--- a/node/natureTours/package.json
+++ b/node/natureTours/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon server.js" ,
+    "debug": "ndb server.js"
   },
   "keywords": [],
   "author": "",
