--- a/node/natureTours/package.json
+++ b/node/natureTours/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "server": "nodemon server.js" ,
+    "server": "nodemon server.js",
     "debug": "ndb server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "config": "^3.2.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
