--- a/node/natureTours/config.env
+++ b/node/natureTours/config.env
@@ -2,4 +2,4 @@ PORT=4000
 MONGO_URI="mongodb+srv://murciegalo:123456789Dnd111@naturetoursapp-p0zur.mongodb.net/NatureToursApp?retryWrites=true&w=majority"
 NODE_ENV="development"
 JWT_SECRET="jwtSecretHackersNotAllowedBro"
-JWT_EXPIRES_IN= 3600
+JWT_EXPIRES_IN= 1d
