Forgot password email completed

--- a/node/natureTours/config.env
+++ b/node/natureTours/config.env
@@ -5,5 +5,5 @@ JWT_SECRET="jwtSecretHackersNotAllowedBro"
 JWT_EXPIRES_IN= 1d
 EMAIL_USERNAME="87a97b35575883"
 EMAIL_PASSWORD="5bc11df2eb70ad"
-EMAIL_HOST: "smtp.mailtrap.io"
-EMAIL_PORT: "2525"
+EMAIL_HOST="smtp.mailtrap.io"
+EMAIL_PORT= 2525
