JWT send via cookies completed

--- a/node/natureTours/config.env
+++ b/node/natureTours/config.env
@@ -3,6 +3,7 @@ MONGO_URI="mongodb+srv://murciegalo:123456789Dnd111@naturetoursapp-p0zur.mongodb
 NODE_ENV="development"
 JWT_SECRET="jwtSecretHackersNotAllowedBro"
 JWT_EXPIRES_IN= 1d
+JWT_COOKIE_EXPIRES_IN=90
 EMAIL_USERNAME="87a97b35575883"
 EMAIL_PASSWORD="5bc11df2eb70ad"
 EMAIL_HOST="smtp.mailtrap.io"
