--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
@@ -12,30 +14,23 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^5.2.0",
     "dotenv": "^7.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
-    "express-rate-limit": "^3.5.0",
-    "helmet": "^3.16.0",
-    "hpp": "^0.2.2",
+    "express-rate-limit": "^3.5.3",
+    "helmet": "^3.22.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.2",
-    "morgan": "^1.9.1",
-    "nodemailer": "^6.1.1",
-    "slugify": "^1.3.4",
+    "mongoose": "^5.9.18",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.4.8",
+    "slugify": "^1.4.0",
     "validator": "^10.11.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.17.0"
+    "prettier": "^1.19.1"
   },
   "engines": {
     "node": ">=10.0.0"
