--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "natours",
   "version": "1.0.0",
-  "description": "Learning node, express and mongoDB",
+  "description": "Tours across Brazil",
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
@@ -10,9 +10,10 @@
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
-  "author": "Jonas Schmedtmann",
+  "author": "Raul M",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.2.0",
     "dotenv": "^7.0.0",
@@ -24,7 +25,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
     "morgan": "^1.10.0",
+    "node-sass": "^4.14.1",
     "nodemailer": "^6.4.8",
+    "react-router-dom": "^5.2.0",
     "slugify": "^1.4.0",
     "validator": "^10.11.0",
     "xss-clean": "^0.1.1"
