--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "helmet": "^3.22.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "mapbox-gl": "^1.11.0",
     "mongoose": "^5.9.18",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
