--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^3.5.3",
     "helmet": "^3.22.0",
     "hpp": "^0.2.3",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mapbox-gl": "^1.11.0",
     "mongoose": "^5.9.18",
