--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "mapbox-gl": "^1.11.0",
     "mongoose": "^5.9.20",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.10",
+    "sharp": "^0.25.4",
     "slugify": "^1.4.2",
     "validator": "^10.11.0",
     "xss-clean": "^0.1.1"
