--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-rate-limit": "^3.5.3",
     "helmet": "^3.23.2",
     "hpp": "^0.2.3",
+    "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mapbox-gl": "^1.11.0",
     "mongoose": "^5.9.20",
