--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Raul M",
   "license": "ISC",
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.8.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
