stripe checkout in place

--- a/config.env
+++ b/config.env
@@ -8,7 +8,10 @@ JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
-EMAIL_USERNAME=a124458539192a
-EMAIL_PASSWORD=1e3caf48074eba
+EMAIL_USERNAME=87a97b35575883
+EMAIL_PASSWORD=5bc11df2eb70ad
 EMAIL_HOST=smtp.mailtrap.io
-EMAIL_PORT=25
+EMAIL_PORT=2525
+EMAIL_FROM=admin@freakingTours.com
+
+STRIPE_SECRET_KEY=sk_test_eIYbDbiqmqdfPdu8U1dBhXab00tL2VqaMo
