--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.10",
+    "react-stripe-checkout": "^2.6.3",
     "sharp": "^0.25.4",
     "slugify": "^1.4.2",
     "validator": "^10.11.0",
