--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hpp": "^0.2.3",
     "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash.memoize": "^4.1.2",
     "mapbox-gl": "^1.11.0",
     "mongoose": "^5.9.20",
     "morgan": "^1.10.0",
