--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Tours across Brazil",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run start\" \"npm run client\"",
+    "server": "nodemon server.js",
+    "start": "node server.js",
+    "build": "cd client && npm run build",
+    "dev": "concurrently --kill--others-on-fail \"npm run server\" \"npm run client\"",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
