--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "Tours across Brazil",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon server.js",
     "client": "npm start --prefix client",
-    "server": "nodemon server.js",
-    "start": "node server.js",
-    "build": "cd client && npm run build",
-    "dev": "concurrently --kill--others-on-fail \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
@@ -25,6 +23,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^3.5.3",
+    "express-sslify": "^1.2.0",
     "helmet": "^3.23.2",
     "hpp": "^0.2.3",
     "html-to-text": "^5.1.1",
