--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "freaking-tours-client",
+  "name": "client",
   "version": "0.1.0",
   "proxy": "http://localhost:4000",
   "private": true,
