--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "freaking-tours",
+  "name": "natours",
   "version": "1.0.0",
   "description": "Tours across Brazil",
-  "engines": {
-    "node": ">=14.2.0",
-    "npm": "6.14.5"
-  },
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "client": "npm start --prefix client",
-    "build": "cd client && npm run build",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js",
-    "server": "nodemon server.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "debug": "ndb server.js"
   },
   "author": "Raul M",
   "license": "ISC",
@@ -51,5 +44,8 @@
   },
   "devDependencies": {
     "prettier": "^1.19.1"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
