--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "14.2.0",
     "npm": "6.14.5"
   },
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "start": "node server.js",
     "client": "npm start --prefix client",
