--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node server.js",
     "client": "npm start --prefix client",
     "server": "nodemon server.js",
-    "build": "cd client && npm run build",
+    "build": "npm install --only=dev && npm install && npm run build",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
